edv/kustomize/edv/overlays/local/edv/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: edv
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: edv-ca-cert
      containers:
        - name: edv
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/edv/tls
