edv/kustomize/edv/overlays/local/edv/ingress.yml
#
# Copyright SecureKey Technologies Inc. All Rights Reserved.
#
# SPDX-License-Identifier: Apache-2.0
#

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edv
spec:
  tls:
  - hosts:
      - EDV_SERVICE_NAME.||DOMAIN||
    secretName: INGRESS_TLS_SECRET
  rules:
  - host: EDV_SERVICE_NAME.||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: EDV_SERVICE_NAME
            port:
              name: http
